--- a/TrueFalseStarter/Base.lproj/Main.storyboard
+++ b/TrueFalseStarter/Base.lproj/Main.storyboard
@@ -95,12 +95,18 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sample Question" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I3V-ih-1Ky">
-                                <rect key="frame" x="37" y="43" width="300" height="70"/>
+                                <rect key="frame" x="37" y="13" width="300" height="70"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="70" id="tOb-54-PAM"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="35O-0M-Ctr">
+                                <rect key="frame" x="114" y="91" width="147" height="60"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="50"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -110,21 +116,24 @@
                             <constraint firstItem="6Aw-3p-PvB" firstAttribute="top" secondItem="jcj-Xk-G2y" secondAttribute="bottom" constant="8" id="4PC-8K-D4y"/>
                             <constraint firstAttribute="trailingMargin" secondItem="AS4-HX-g9f" secondAttribute="trailing" constant="22" id="8pl-rm-XL0"/>
                             <constraint firstItem="6Aw-3p-PvB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9Xo-dT-cfO"/>
-                            <constraint firstItem="J1V-MS-ECi" firstAttribute="top" secondItem="I3V-ih-1Ky" secondAttribute="bottom" constant="87" id="CR0-Qb-DdF"/>
+                            <constraint firstItem="J1V-MS-ECi" firstAttribute="top" secondItem="I3V-ih-1Ky" secondAttribute="bottom" constant="117" id="CR0-Qb-DdF"/>
                             <constraint firstItem="K17-uy-MvB" firstAttribute="top" secondItem="6Aw-3p-PvB" secondAttribute="bottom" constant="82" id="Oo0-yj-Nt8"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="K17-uy-MvB" secondAttribute="bottom" constant="111" id="PfK-m4-SAS"/>
                             <constraint firstItem="K17-uy-MvB" firstAttribute="leading" secondItem="6Aw-3p-PvB" secondAttribute="leading" id="Stb-bB-GCp"/>
+                            <constraint firstItem="35O-0M-Ctr" firstAttribute="top" secondItem="I3V-ih-1Ky" secondAttribute="bottom" constant="8" id="Tzr-LI-rkJ"/>
                             <constraint firstItem="jcj-Xk-G2y" firstAttribute="top" secondItem="AS4-HX-g9f" secondAttribute="bottom" constant="8" id="UJb-Vj-XBJ"/>
                             <constraint firstItem="J1V-MS-ECi" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VT8-Wy-27r"/>
                             <constraint firstItem="AS4-HX-g9f" firstAttribute="top" secondItem="J1V-MS-ECi" secondAttribute="bottom" constant="8" id="ZPL-t4-6kh"/>
                             <constraint firstItem="J1V-MS-ECi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="21" id="ZYb-OE-136"/>
-                            <constraint firstItem="I3V-ih-1Ky" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="23" id="cMR-da-nwL"/>
+                            <constraint firstItem="I3V-ih-1Ky" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="-7" id="cMR-da-nwL"/>
                             <constraint firstItem="AS4-HX-g9f" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cWd-G4-gcR"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="35O-0M-Ctr" secondAttribute="trailing" constant="98" id="chg-Fq-Dms"/>
                             <constraint firstItem="jcj-Xk-G2y" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="g93-Pk-yFd"/>
                             <constraint firstAttribute="trailingMargin" secondItem="I3V-ih-1Ky" secondAttribute="trailing" constant="22" id="gbf-0y-JVj"/>
                             <constraint firstItem="jcj-Xk-G2y" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="21" id="hKG-Ms-YSh"/>
                             <constraint firstItem="AS4-HX-g9f" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="21" id="hUU-W3-2qP"/>
                             <constraint firstItem="I3V-ih-1Ky" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ng4-45-m9i"/>
+                            <constraint firstItem="35O-0M-Ctr" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="98" id="rOE-fl-zQb"/>
                             <constraint firstItem="K17-uy-MvB" firstAttribute="trailing" secondItem="6Aw-3p-PvB" secondAttribute="trailing" id="tXe-OB-PHh"/>
                             <constraint firstItem="6Aw-3p-PvB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="21" id="vt9-O1-0QP"/>
                             <constraint firstItem="I3V-ih-1Ky" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="21" id="xDY-c6-QcJ"/>
@@ -140,6 +149,7 @@
                         <outlet property="answerD" destination="6Aw-3p-PvB" id="Aot-BL-G29"/>
                         <outlet property="playAgainButton" destination="K17-uy-MvB" id="0Bx-Cm-ye0"/>
                         <outlet property="questionField" destination="I3V-ih-1Ky" id="7UI-o2-ATi"/>
+                        <outlet property="timerLabel" destination="35O-0M-Ctr" id="ce3-Jc-onk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
